[metadata]
name = greedyKS-test-pkg
version = 0.0.2
author = Thalis Galeno
author_email = thalis5800@hotmail.com.br
description = Just a test for greedyKS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    fenwick >= 0.1.0 
    segment-tree >= 0.3.2
    scipy >= 1.7.3

[options.packages.find]
where = src
