[metadata]
name = driftwatch
version = 0.0.1
author = Douglas O. Cardoso, Thalis Galeno
author_email = douglascardoso@gmail.com
description = A collection of implementations of drift detectors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moretoknow/driftwatch
project_urls =
    Bug Tracker = https://github.com/moretoknow/driftwatch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    fenwick >= 0.1.0 
    segment-tree >= 0.3.2
    scipy >= 1.7.3
    ddsketch == 1.1.2

[options.packages.find]
where = src
